--- a/src/pages/Home/Category/Category.module.scss
+++ b/src/pages/Home/Category/Category.module.scss
@@ -53,6 +53,14 @@
     .custom-sub {
         margin-bottom: 30px !important;
     }
+
+    .custom-col {
+        flex-basis: 100% !important;
+    }
+
+    .custom-col2 {
+        flex-basis: 100% !important;
+    }
 }
 
 // PC & Laptop lớn (1280px trở xuống)
