--- a/src/Layout/DefaultLayout/Footer/Footer.module.scss
+++ b/src/Layout/DefaultLayout/Footer/Footer.module.scss
@@ -44,7 +44,7 @@ root {
         .box {
             display: flex;
             align-items: center;
-            justify-content: center;
+            // justify-content: center;
             gap: 15px;
 
             .wrap-icon {
@@ -118,10 +118,10 @@ root {
             }
         }
 
-        .box-bdRl {
-            border-left: 2px solid #ffffff33;
-            border-right: 2px solid #ffffff33;
-        }
+        // .box-bdRl {
+        //     border-left: 2px solid #ffffff33;
+        //     border-right: 2px solid #ffffff33;
+        // }
     }
 
     .footer-body {
@@ -341,4 +341,216 @@ root {
             margin-left: 20px;
         }
     }
+}
+
+//==============================Responsive styles==============================
+// Mobile (345px trở xuống)
+@media (max-width: 344px) {
+    .bg-main {
+        padding: 50px 10px;
+    }
+    .box {
+        padding: 30px 0;
+    }
+
+    .content a {
+        font-size: 1.6rem !important;
+    }
+
+    .box-bdRl {
+        border-top: 1px solid #ffffff33;
+        border-bottom: 1px solid #ffffff33;
+    }
+
+    .box2 {
+        padding: 0 12px !important;
+        margin: 0 !important;
+    }
+
+    .wrap-linkEnd {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 5px;
+    }
+
+    .text {
+        margin-bottom: 10px !important;
+    }
+
+    .link-end {
+        margin: 0 !important;
+    }
+}
+
+// Mobile (480px xuống 345px)
+@media (max-width: 480px) and (min-width: 345px) {
+    .bg-main {
+        padding: 50px 10px;
+    }
+    .box {
+        padding: 30px 0;
+    }
+
+    .content a {
+        font-size: 1.6rem !important;
+    }
+
+    .box-bdRl {
+        border-top: 1px solid #ffffff33;
+        border-bottom: 1px solid #ffffff33;
+    }
+
+    .box2 {
+        padding: 0 12px !important;
+        margin: 0 !important;
+    }
+
+    .wrap-linkEnd {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 5px;
+    }
+
+    .text {
+        margin-bottom: 10px !important;
+    }
+
+    .link-end {
+        margin: 0 !important;
+    }
+}
+
+// Tablet nhỏ (768px xuống 481px)
+@media (max-width: 768px) and (min-width: 481px) {
+    .bg-main {
+        padding: 50px 10px;
+    }
+    .box {
+        padding: 30px 0;
+    }
+
+    .content a {
+        font-size: 1.6rem !important;
+    }
+
+    .box-bdRl {
+        border-top: 1px solid #ffffff33;
+        border-bottom: 1px solid #ffffff33;
+    }
+
+    .box2 {
+        padding: 0 12px !important;
+        margin: 0 !important;
+    }
+
+    .footerCategoryLink {
+        padding: 0 12px !important;
+    }
+
+    .wrap-linkEnd {
+        display: flex;
+        justify-content: flex-start;
+        gap: 25px;
+        margin-left: 10px;
+    }
+
+    // .text {
+    //     margin-bottom: 10px !important;
+    // }
+
+    .link-end {
+        margin: 0 !important;
+    }
+}
+
+// Tablet (820px xuống 769px)
+@media (max-width: 820px) and (min-width: 769px) {
+    .bg-main {
+        padding: 50px 10px;
+    }
+    .box {
+        padding: 30px 0;
+    }
+
+    .content a {
+        font-size: 1.6rem !important;
+    }
+
+    .box-bdRl {
+        border-top: 1px solid #ffffff33;
+        border-bottom: 1px solid #ffffff33;
+    }
+
+    .box2 {
+        padding: 0 12px !important;
+        margin: 0 !important;
+    }
+
+    .footerCategoryLink {
+        padding: 0 12px !important;
+    }
+
+    .wrap-linkEnd {
+        display: flex;
+        justify-content: flex-start;
+        gap: 25px;
+        margin-left: 10px;
+    }
+
+    // .text {
+    //     margin-bottom: 10px !important;
+    // }
+
+    .link-end {
+        margin: 0 !important;
+    }
+}
+
+// Laptop nhỏ (1024px xuống 821px)
+@media (max-width: 1024px) and (min-width: 821px) {
+    .bg-main {
+        padding: 50px 10px;
+    }
+    .box {
+        padding: 30px 0;
+    }
+
+    .content a {
+        font-size: 1.6rem !important;
+    }
+
+    .box-bdRl {
+        border-top: 1px solid #ffffff33;
+        border-bottom: 1px solid #ffffff33;
+    }
+
+    .box2 {
+        padding: 0 12px !important;
+        margin: 0 !important;
+    }
+
+    .footerCategoryLink {
+        padding: 0 12px !important;
+    }
+
+    .wrap-linkEnd {
+        display: flex;
+        justify-content: flex-start;
+        gap: 25px;
+        margin-left: 10px;
+    }
+
+    // .text {
+    //     margin-bottom: 10px !important;
+    // }
+
+    .link-end {
+        margin: 0 !important;
+    }
+}
+
+// PC & Laptop lớn (1280px xuống 1025px)
+@media (max-width: 1280px) and (min-width: 1025px) {
 }
