--- a/src/pages/Home/BigCounter/BigCounter.module.scss
+++ b/src/pages/Home/BigCounter/BigCounter.module.scss
@@ -41,7 +41,7 @@ root {
             display: flex;
             flex-direction: column;
             justify-content: center;
-            
+
             .number {
                 color: var(--white-color);
                 margin-bottom: 10px;
@@ -57,4 +57,59 @@ root {
             }
         }
     }
+}
+
+//==============================Responsive styles==============================
+@media (max-width: 345px) {
+    .bigCounter {
+        padding-bottom: 20px !important;
+    }
+}
+
+// Mobile nhỏ (dưới 480px)
+@media (max-width: 480px) {
+    .bigCounter {
+        position: relative;
+        top: 0;
+        z-index: 4;
+        padding: 0 20px;
+        padding-bottom: 20px !important;
+    }
+}
+
+// Tablet (768px trở xuống)
+@media (max-width: 768px) and (min-width: 480px) {
+    .bigCounter {
+        position: relative;
+        top: 0;
+        z-index: 4;
+        padding: 0 20px;
+        padding-bottom: 20px !important;
+    }
+}
+
+// Laptop nhỏ (820px to 768px)
+@media (max-width: 820px) and (min-width: 768px) {
+    .bigCounter {
+        position: relative;
+        top: 0;
+        z-index: 4;
+        padding: 0 20px;
+        padding-bottom: 20px !important;
+    }
+}
+
+// Laptop (1024px to 820px)
+@media (max-width: 1024px) and (min-width: 820px) {
+    .bigCounter {
+        position: relative;
+        top: 0;
+        z-index: 4;
+        padding: 0 20px;
+        padding-bottom: 20px !important;
+    }
+}
+
+// PC & Laptop lớn (1280px trở xuống)
+@media (max-width: 1280px) {
 }
