--- a/src/pages/Home/Brands/Brands.module.scss
+++ b/src/pages/Home/Brands/Brands.module.scss
@@ -26,13 +26,13 @@
     margin: 0 10px;
 }
 
-.brand1, 
-.brand2, 
-.brand3, 
-.brand4, 
-.brand5, 
-.brand6, 
-.brand7, 
+.brand1,
+.brand2,
+.brand3,
+.brand4,
+.brand5,
+.brand6,
+.brand7,
 .brand8 {
     width: 100%;
     height: 100%;
@@ -48,3 +48,89 @@
     }
 }
 
+//==============================Responsive styles==============================
+// Mobile (345px trở xuống)
+@media (max-width: 344px) {
+    .brands {
+        padding: 40px 20px;
+    }
+
+    .heading {
+        text-align: center;
+    }
+
+    .title {
+        font-size: 2.8rem;
+        margin-top: -145px !important;
+    }
+}
+
+// Mobile (480px xuống 345px)
+@media (max-width: 480px) and (min-width: 345px) {
+    .brands {
+        padding: 40px 20px;
+    }
+
+    .heading {
+        text-align: center;
+    }
+
+    .title {
+        font-size: 2.8rem;
+        margin-top: -145px !important;
+    }
+}
+
+// Tablet nhỏ (768px xuống 481px)
+@media (max-width: 768px) and (min-width: 481px) {
+    .brands {
+        padding: 40px 20px;
+    }
+
+    .heading {
+        text-align: center;
+    }
+
+    .title {
+        margin-top: -145px !important;
+    }
+}
+
+// Tablet (820px xuống 769px)
+@media (max-width: 820px) and (min-width: 769px) {
+    .brands {
+        padding: 40px 20px;
+    }
+
+    .heading {
+        text-align: center;
+    }
+
+    .title {
+        margin-top: -145px !important;
+    }
+}
+
+// Laptop nhỏ (1024px xuống 821px)
+@media (max-width: 1024px) and (min-width: 821px) {
+    .brands {
+        padding: 60px 20px;
+    }
+
+    .heading {
+        text-align: center;
+        width: 100% !important;
+    }
+
+    .title {
+        margin-top: -145px !important;
+    }
+
+    .main-brands {
+        width: 100% !important;
+    }
+}
+
+// PC & Laptop lớn (1280px xuống 1025px)
+@media (max-width: 1280px) and (min-width: 1025px) {
+}
