--- a/src/pages/Home/IntroduceTeacherContentHome/IntroduceTeacherContentHome.module.scss
+++ b/src/pages/Home/IntroduceTeacherContentHome/IntroduceTeacherContentHome.module.scss
@@ -220,7 +220,6 @@ root {
     animation: jumpReverseAni 10s linear infinite;
 }
 
-
 @keyframes slideInY {
     from {
         opacity: 0;
@@ -287,4 +286,176 @@ root {
     100% {
         transform: rotate(360deg);
     }
+}
+
+//==============================Responsive styles==============================
+// Mobile (345px trở xuống)
+@media (max-width: 344px) {
+    .teacher {
+        padding: 60px 0;
+    }
+
+    .custom-box {
+        font-size: 2.6rem !important;
+    }
+
+    .contact-link {
+        display: block;
+        margin-top: 20px;
+        margin-left: 0;
+    }
+
+    .shape-wrap {
+        display: none;
+    }
+}
+
+// Mobile (480px xuống 345px)
+@media (max-width: 480px) and (min-width: 345px) {
+    .teacher {
+        padding: 60px 0;
+    }
+
+    .custom-box {
+        font-size: 2.6rem !important;
+    }
+
+    .contact-link {
+        display: block;
+        margin-top: 20px;
+        margin-left: 0;
+    }
+
+    .shape-wrap {
+        display: none;
+    }
+}
+
+// Tablet nhỏ (768px xuống 481px)
+@media (max-width: 768px) and (min-width: 481px) {
+    .teacher {
+        padding: 60px 0;
+    }
+
+    .wrapper {
+        padding: 0 40px;
+    }
+
+    .wrap-btn {
+        display: flex;
+        align-items: baseline;
+        gap: 20px;
+    }
+
+    .custom-box {
+        font-size: 3.6rem !important;
+    }
+
+    .contact-link {
+        display: block;
+        margin-top: 20px;
+        margin-left: 0;
+    }
+
+    .custom-col {
+        margin-top: 20px !important;
+    }
+
+    .custom-col_product {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .shape-wrap {
+        display: none;
+    }
+}
+
+// Tablet (820px xuống 769px)
+@media (max-width: 820px) and (min-width: 769px) {
+    .teacher {
+        padding: 60px 0;
+    }
+
+    .wrapper {
+        padding: 0 40px;
+    }
+
+    .wrap-btn {
+        display: flex;
+        align-items: baseline;
+        gap: 20px;
+    }
+
+    .custom-box {
+        font-size: 3.6rem !important;
+    }
+
+    .contact-link {
+        display: block;
+        margin-top: 20px;
+        margin-left: 0;
+    }
+
+    .custom-col {
+        margin-top: 20px !important;
+    }
+
+    .custom-col_product {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .shape-wrap {
+        display: none;
+    }
+}
+
+// Laptop nhỏ (1024px xuống 821px)
+@media (max-width: 1024px) and (min-width: 821px) {
+    .teacher {
+        padding: 60px 0;
+    }
+
+    .wrapper {
+        padding: 0 40px;
+    }
+
+    .wrap-btn {
+        display: flex;
+        align-items: baseline;
+        gap: 20px;
+    }
+
+    .custom-box {
+        font-size: 3.6rem !important;
+    }
+
+    .contact-link {
+        display: block;
+        margin-top: 20px;
+        margin-left: 0;
+    }
+
+    .custom-colW100 {
+        width: 100% !important;
+    }
+
+    .custom-col {
+        width: 100% !important;
+        margin-top: 20px !important;
+    }
+
+    .custom-col_product {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .shape-wrap {
+        display: none;
+    }
+}
+
+// PC & Laptop lớn (1280px xuống 1025px)
+@media (max-width: 1280px) and (min-width: 1025px) {
 }
