--- a/src/pages/Home/NewsHome/NewsHome.module.scss
+++ b/src/pages/Home/NewsHome/NewsHome.module.scss
@@ -17,7 +17,7 @@
     border-radius: 10px;
     background-color: var(--white-color);
     border: 1px solid var(--border-color);
-    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 7px 14px 0px rgba(234, 237, 242, 0.5);
 }
 
 .imgContent {
@@ -65,4 +65,103 @@
 .custom-sub {
     margin: 0 !important;
     text-transform: capitalize;
+}
+
+//==============================Responsive styles==============================
+// Mobile (345px trở xuống)
+@media (max-width: 344px) {
+    .custom-box {
+        justify-content: center;
+    }
+
+    .custom-title {
+        margin-bottom: 12px !important;
+    }
+
+    .custom-sub {
+        text-align: center;
+        font-size: 2.8rem !important;
+    }
+
+    .card {
+        min-width: 300px;
+        padding: 20px;
+    }
+}
+
+// Mobile (480px xuống 345px)
+@media (max-width: 480px) and (min-width: 345px) {
+    .custom-box {
+        justify-content: center;
+    }
+
+    .custom-title {
+        margin-bottom: 12px !important;
+    }
+
+    .custom-sub {
+        text-align: center;
+        font-size: 2.8rem !important;
+    }
+
+    .card {
+        min-width: 300px;
+        padding: 20px;
+    }
+}
+
+// Tablet nhỏ (768px xuống 481px)
+@media (max-width: 768px) and (min-width: 481px) {
+    .custom-title {
+        margin-bottom: 12px !important;
+    }
+
+    .custom-sub {
+        text-align: center;
+        font-size: 2.8rem !important;
+    }
+
+    .card {
+        min-width: 300px;
+        padding: 20px;
+    }
+}
+
+// Tablet (820px xuống 769px)
+@media (max-width: 820px) and (min-width: 769px) {
+    .custom-title {
+        margin-bottom: 12px !important;
+    }
+
+    .custom-sub {
+        text-align: center;
+        font-size: 2.8rem !important;
+    }
+
+    .card {
+        min-width: 300px;
+        padding: 20px;
+    }
+}
+
+// Laptop nhỏ (1024px xuống 821px)
+@media (max-width: 1024px) and (min-width: 821px) {
+    .custom-title {
+        margin-bottom: 12px !important;
+    }
+
+    .custom-sub {
+        text-align: center;
+        font-size: 2.8rem !important;
+    }
+
+    .card {
+        min-width: 476px;
+        padding: 20px;
+    }
+}
+
+
+// PC & Laptop lớn (1280px xuống 1025px)
+@media (max-width: 1280px) and (min-width: 1025px) {
 }
