--- a/src/pages/Home/SaleContent/SaleContent.module.scss
+++ b/src/pages/Home/SaleContent/SaleContent.module.scss
@@ -163,3 +163,119 @@ root {
         transform: rotate(360deg);
     }
 }
+
+//==============================Responsive styles==============================
+// Mobile (345px trở xuống)
+@media (max-width: 344px) {
+    .wrapper {
+        margin: 80px auto !important;
+    }
+
+    .sub {
+        font-size: 2.6rem !important;
+        margin-top: -120px !important;
+    }
+
+    .shape1, 
+    .shape2,
+    .shape3 {
+        display: none;
+    }
+
+    .custom-btn {
+        margin-bottom: 20px;
+    }
+}
+
+// Mobile (480px xuống 345px)
+@media (max-width: 480px) and (min-width: 345px) {
+    .wrapper {
+        margin: 80px auto !important;
+    }
+
+    .sub {
+        font-size: 2.6rem !important;
+        margin-top: -120px !important;
+    }
+
+    .shape1, 
+    .shape2,
+    .shape3 {
+        display: none;
+    }
+
+    .custom-btn {
+        margin-bottom: 20px;
+    }
+}
+
+// Tablet nhỏ (768px xuống 481px)
+@media (max-width: 768px) and (min-width: 481px) {
+    .wrapper {
+        margin: 80px auto !important;
+    }
+
+    .sub {
+        font-size: 3.6rem !important;
+        margin-top: -135px !important;
+    }
+
+    // .shape1, 
+    // .shape2,
+    // .shape3 {
+    //     display: none;
+    // }
+
+    .custom-btn {
+        margin-bottom: 20px;
+    }
+}
+
+// Tablet (820px xuống 769px)
+@media (max-width: 820px) and (min-width: 769px) {
+    .wrapper {
+        margin: 80px auto !important;
+    }
+
+    .sub {
+        font-size: 3.6rem !important;
+        margin-top: -135px !important;
+    }
+
+    // .shape1, 
+    // .shape2,
+    // .shape3 {
+    //     display: none;
+    // }
+
+    .custom-btn {
+        margin-bottom: 20px;
+    }
+}
+
+// Laptop nhỏ (1024px xuống 821px)
+@media (max-width: 1024px) and (min-width: 821px) {
+    .wrapper {
+        margin: 80px auto !important;
+    }
+
+    .sub {
+        font-size: 3.6rem !important;
+        margin-top: -135px !important;
+    }
+
+    // .shape1, 
+    // .shape2,
+    // .shape3 {
+    //     display: none;
+    // }
+
+    .custom-btn {
+        margin-bottom: 20px;
+    }
+}
+
+
+// PC & Laptop lớn (1280px xuống 1025px)
+@media (max-width: 1280px) and (min-width: 1025px) {
+}
