--- a/src/pages/Home/Testimonial/Testimonial.module.scss
+++ b/src/pages/Home/Testimonial/Testimonial.module.scss
@@ -129,3 +129,99 @@
         transform: rotate(360deg);
     }
 }
+
+//==============================Responsive styles==============================
+// Mobile (345px trở xuống)
+@media (max-width: 344px) {
+    .box {
+        padding: 40px 20px;
+        margin: 10px 15px;
+    }
+
+    .content {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .custom-sub {
+        font-size: 2.8rem !important;
+    }
+
+    .name h3 {
+        font-size: 2rem !important;
+    }
+
+    .shape-wrap1,
+    .shape-wrap2 {
+        display: none;
+    }
+}
+
+// Mobile (480px xuống 345px)
+@media (max-width: 480px) and (min-width: 345px) {
+    .box {
+        padding: 40px 20px;
+        margin: 10px 15px;
+    }
+
+    .content {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .custom-sub {
+        font-size: 2.8rem !important;
+    }
+
+    .name h3 {
+        font-size: 2.4rem !important;
+    }
+
+    .shape-wrap1,
+    .shape-wrap2 {
+        display: none;
+    }
+}
+
+// Tablet nhỏ (768px xuống 481px)
+@media (max-width: 768px) and (min-width: 481px) {
+    .box {
+        padding: 40px 20px;
+        margin: 10px 15px;
+    }
+
+    .content {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .content {
+        flex-direction: column;
+        gap: 20px;
+    }
+}
+
+// Tablet (820px xuống 769px)
+@media (max-width: 820px) and (min-width: 769px) {
+    .custom-colPd36 {
+        padding-left: 36px;
+        padding-right: 36px;
+    }
+}
+
+// Laptop nhỏ (1024px xuống 821px)
+@media (max-width: 1024px) and (min-width: 821px) {
+    .content {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .custom-colPd36 {
+        padding-left: 36px;
+        padding-right: 36px;
+    }
+}
+
+// PC & Laptop lớn (1280px xuống 1025px)
+@media (max-width: 1280px) and (min-width: 1025px) {
+}
