--- a/src/pages/Home/Wcu/Wcu.module.scss
+++ b/src/pages/Home/Wcu/Wcu.module.scss
@@ -142,3 +142,72 @@
         bottom: 5%;
     }
 }
+
+//==============================Responsive styles==============================
+// Mobile (345px trở xuống)
+@media (max-width: 345px) {
+    .contentFirst {
+        margin-right: 24px !important;
+    }
+
+    .studentJump {
+        width: 253px;
+
+        h5 {
+            font-size: 1.8rem !important;
+        }
+    }
+
+    .custom-sub {
+        font-size: 2.4rem !important;
+    }
+}
+
+// Mobile (480px xuống 345px)
+@media (max-width: 480px) and (min-width: 345px) {
+    .contentFirst {
+        margin-right: 24px !important;
+    }
+
+    .studentJump {
+        width: 253px;
+
+        h5 {
+            font-size: 1.8rem !important;
+        }
+    }
+
+    .custom-sub {
+        font-size: 2.4rem !important;
+    }
+}
+
+// Tablet nhỏ (768px xuống 481px)
+@media (max-width: 768px) and (min-width: 481px) {
+
+}
+
+// Tablet (820px xuống 769px)
+@media (max-width: 820px) and (min-width: 769px) {
+    
+}
+
+// Laptop nhỏ (1024px xuống 821px)
+@media (max-width: 1024px) and (min-width: 821px) {
+    .studentJump {
+        position: absolute !important;
+        top: 50% !important;
+        left: 2% !important;
+    }
+
+    .custom-col100 {
+        width: 100% !important;
+        margin-right: 0;
+    }
+}
+
+
+// PC & Laptop lớn (1280px xuống 1025px)
+@media (max-width: 1280px) and (min-width: 1025px) {
+
+}
