--- a/src/pages/Introduce/AboutIntroduce/AboutIntroduce.module.scss
+++ b/src/pages/Introduce/AboutIntroduce/AboutIntroduce.module.scss
@@ -83,7 +83,48 @@
         color: var(--title-color);
         font-weight: 600;
     }
+}
 
-    p {
+//==============================Responsive styles==============================
+// Mobile (345px trở xuống)
+@media (max-width: 344px) {
+    .about {
+        padding: 70px 12px;
     }
+
+    .card {
+        padding: 30px;
+    }
+
+    .custom-sub {
+        font-size: 2.8rem !important;
+    }
+
+    .card h3 {
+        font-size: 2.2rem !important;
+    }
+
+    .card p {
+        font-size: 1.4rem !important;
+    }
+}
+
+// Mobile (480px xuống 345px)
+@media (max-width: 480px) and (min-width: 345px) {
+}
+
+// Tablet nhỏ (768px xuống 481px)
+@media (max-width: 768px) and (min-width: 481px) {
+}
+
+// Tablet (820px xuống 769px)
+@media (max-width: 820px) and (min-width: 769px) {
+}
+
+// Laptop nhỏ (1024px xuống 821px)
+@media (max-width: 1024px) and (min-width: 821px) {
+}
+
+// PC & Laptop lớn (1280px xuống 1025px)
+@media (max-width: 1280px) and (min-width: 1025px) {
 }
