--- a/src/pages/Introduce/AboutIntroduce/AboutIntroduce.module.scss
+++ b/src/pages/Introduce/AboutIntroduce/AboutIntroduce.module.scss
@@ -28,7 +28,7 @@
 
 .about {
     padding: var(--section-title-space);
-    background-color: var(--white-color);
+    // background-color: var(--white-color);
     text-transform: capitalize;
 }
 
