--- a/src/pages/News/News.module.scss
+++ b/src/pages/News/News.module.scss
@@ -173,10 +173,16 @@
         margin-left: 10px;
         color: var(--body-color);
         font-weight: 500;
-
         transition: color 0.3s ease;
+    }
 
-        &:hover {
+    .item-link {
+        background-color: transparent;
+        transition: color 0.3s ease;
+        cursor: pointer;
+
+
+        &:hover span{
             color: var(--theme-color);
         }
     }
