--- a/src/pages/Auth/Auth.module.scss
+++ b/src/pages/Auth/Auth.module.scss
@@ -22,227 +22,6 @@
     padding: 14px 20px;
 }
 
-.box {
-    background-color: var(--white-color);
-    border: 2px solid #dce8ff;
-    border-radius: 25px;
-    padding: 40px 60px 40px 60px;
-    margin-top: 20px;
-    margin-right: 60px;
-    margin-left: 60px;
-    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-    animation: fadeIn 0.5s ease-in forwards;
-}
-
-.header {
-    margin: 20px 0;
-}
-
-.login {
-    text-align: center;
-    font-size: 2.2rem;
-    font-weight: 700;
-    margin: 0;
-}
-
-.main-form {
-    margin: 10px 0;
-}
-
-.body {
-    width: 100%;
-    padding-top: 10px;
-}
-
-.form-wrap {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.form-userName {
-    position: relative;
-}
-
-.form-password {
-    position: relative;
-}
-
-.form-input {
-    // max-width: 470px;
-    height: 55px;
-    padding: 0 25px 0 50px;
-    padding-right: 45px;
-    border: 1px solid transparent;
-    color: var(--body-color);
-    background-color: var(--smoke-color);
-    border-radius: 10px;
-    font-size: 16px;
-    width: 100%;
-    font-family: var(--body-font);
-    -webkit-transition: 0.3s ease-in-out;
-    transition: 0.3s ease-in-out;
-
-    &:focus-within {
-        border: 1px solid var(--theme-color);
-    }
-}
-
-.wrap-icon-user {
-    position: absolute;
-    top: 50%;
-    left: 20px;
-    transform: translateY(-50%);
-}
-
-.wrap-icon-lock {
-    position: absolute;
-    top: 50%;
-    left: 20px;
-    transform: translateY(-50%);
-}
-
-.option {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 20px 0;
-}
-
-.remember {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
-    input[type='checkbox'] {
-        appearance: none; /* Loại bỏ kiểu mặc định */
-        width: 15px;
-        height: 15px;
-        border: 2px solid #3498db; /* Viền màu xanh */
-        border-radius: 5px; /* Bo góc tròn */
-        cursor: pointer;
-        display: inline-block;
-        position: relative;
-    }
-
-    input[type='checkbox']:checked {
-        border-radius: 5px;
-        background-color: #3498db; /* Màu nền khi được chọn */
-        border-color: #2980b9;
-    }
-
-    input[type='checkbox']::before {
-        content: '✔';
-        font-size: 14px;
-        color: white;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        display: none;
-    }
-
-    input[type='checkbox']:checked::before {
-        display: block;
-    }
-
-    .remember-pass {
-        cursor: pointer;
-    }
-}
-
-.forgot {
-    border-bottom: 2px solid var(--theme-color);
-    transition: var(--transition);
-
-    &:hover {
-        border-bottom-color: var(--title-color);
-    }
-
-    &:hover .forgot-link {
-        color: var(--title-color);
-    }
-}
-
-.forgot-link {
-    transition: var(--transition);
-    color: var(--theme-color);
-}
-
-.submit {
-    padding-top: 30px;
-    text-align: center;
-}
-
-.submit-btn {
-    position: relative;
-    z-index: 2;
-    width: 100%;
-    overflow: hidden;
-    vertical-align: middle;
-    display: inline-block;
-    border: none;
-    text-transform: uppercase;
-    text-align: center;
-    background-color: var(--theme-color);
-    color: var(--white-color);
-    font-family: var(--title-font);
-    box-shadow: 0px 6px 16px rgba(13, 94, 244, 0.24);
-    border-radius: 10px;
-    font-size: 1.6rem;
-    font-weight: 600;
-    line-height: 1;
-    padding: 25px 29px;
-    transition: var(--transition);
-
-    &:hover {
-        background-color: var(--title-color);
-    }
-}
-
-.required {
-    margin: 20px 0;
-}
-
-.required-link {
-    color: var(--theme-color);
-    transition: var(--transition);
-    padding-bottom: 5px;
-    border-bottom: 2px solid var(--theme-color);
-
-    &:hover {
-        color: var(--title-color);
-        border-bottom: 2px solid var(--title-color);
-    }
-}
-
-.footer {
-    text-align: center;
-}
-
-.social-list {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 12px;
-}
-
-.link-social {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
-    border: 1px solid #ccc;
-    transition: var(--transition);
-}
-
-.img-social {
-    width: 30px;
-    height: 30px;
-}
-
 .custom-col {
     display: flex;
     flex-direction: column-reverse;
@@ -261,13 +40,13 @@
     position: relative;
     top: 51px;
     left: 150px;
-    opacity: 0;
-    animation: fadeIn 0.5s ease-in forwards;
+    // opacity: 0;
+    animation: fadeIn 0.5s ease-in;
 }
 
 .custom-text {
     color: white !important;
-    font-size: 2rem;
+    font-size: 1.8rem;
     padding: 10px 15px;
     // max-width: 350px;
     // word-wrap: break-word;
@@ -275,7 +54,7 @@
     // top: 51px;
     // left: 150px;
     // opacity: 0;
-    // animation: fadeIn 0.5s ease-in forwards;
+    // animation: fadeIn 0.5s ease-in;
 }
 
 /* Tạo đuôi của hộp tin nhắn */
@@ -335,7 +114,7 @@
         margin-top: 20px;
         margin: 0;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-        animation: fadeIn 0.5s ease-in forwards;
+        animation: fadeIn 0.5s ease-in;
     }
 
     .remember-pass,
@@ -394,7 +173,7 @@
         margin-top: 20px;
         margin: 0;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-        animation: fadeIn 0.5s ease-in forwards;
+        animation: fadeIn 0.5s ease-in;
     }
 
     .remember-pass,
@@ -453,7 +232,7 @@
         margin-top: 20px;
         margin: 0;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-        animation: fadeIn 0.5s ease-in forwards;
+        animation: fadeIn 0.5s ease-in;
     }
 
     .remember-pass,
@@ -512,7 +291,7 @@
         margin-top: 20px;
         margin: 0;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-        animation: fadeIn 0.5s ease-in forwards;
+        animation: fadeIn 0.5s ease-in;
     }
 
     .remember-pass,
@@ -569,7 +348,7 @@
         margin-top: 20px;
         margin: 0;
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-        animation: fadeIn 0.5s ease-in forwards;
+        animation: fadeIn 0.5s ease-in;
     }
 
     .remember-pass,
