Hoàn thành UI phần forgot-password

--- a/src/pages/Auth/ForgotPassWord/ForgotPassWord.module.scss
+++ b/src/pages/Auth/ForgotPassWord/ForgotPassWord.module.scss
@@ -16,12 +16,12 @@
     margin: 20px 0;
 }
 
-.login {
+.forgot {
     text-align: center;
     font-size: 2.2rem;
     font-weight: 700;
     margin: 0;
-    color: var(--title-color) !important;
+    color: var(--body-color) !important;
 }
 
 .main-form {
@@ -39,11 +39,9 @@
     gap: 20px;
 }
 
-.form-userName {
-    position: relative;
-}
-
-.form-password {
+.form-userName,
+.form-password,
+.form-email {
     position: relative;
 }
 
@@ -81,20 +79,15 @@
 .wrap-icon-eye,
 .wrap-icon-eyeClose {
     position: absolute;
-    top: 50%;
+    top: 29px;
     right: 20px;
     transform: translateY(-50%);
     cursor: pointer;
 }
 
-.wrap-icon-user {
-    position: absolute;
-    top: 29px;
-    left: 20px;
-    transform: translateY(-50%);
-}
-
-.wrap-icon-lock {
+.wrap-icon-user,
+.wrap-icon-lock,
+.wrap-icon-email {
     position: absolute;
     top: 29px;
     left: 20px;
@@ -110,68 +103,6 @@
     align-items: center;
     justify-content: space-between;
     margin: 20px 0;
-}
-
-.remember {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    color: var(--body-color) !important;
-
-    input[type='checkbox'] {
-        appearance: none; /* Loại bỏ kiểu mặc định */
-        width: 15px;
-        height: 15px;
-        border: 2px solid #3498db; /* Viền màu xanh */
-        border-radius: 5px; /* Bo góc tròn */
-        cursor: pointer;
-        display: inline-block;
-        position: relative;
-    }
-
-    input[type='checkbox']:checked {
-        border-radius: 5px;
-        background-color: #3498db; /* Màu nền khi được chọn */
-        border-color: #2980b9;
-    }
-
-    input[type='checkbox']::before {
-        content: '✔';
-        font-size: 14px;
-        color: white;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        display: none;
-    }
-
-    input[type='checkbox']:checked::before {
-        display: block;
-    }
-
-    .remember-pass {
-        cursor: pointer;
-    }
-}
-
-.forgot {
-    border-bottom: 2px solid var(--theme-color);
-    transition: var(--transition);
-
-    &:hover {
-        border-bottom-color: var(--title-color);
-    }
-
-    &:hover .forgot-link {
-        color: var(--title-color);
-    }
-}
-
-.forgot-link {
-    transition: var(--transition);
-    color: var(--theme-color);
-    cursor: pointer;
 }
 
 .submit {
@@ -205,48 +136,19 @@
     }
 }
 
-.required {
-    margin: 20px 0;
-}
-
-.required-link {
-    color: var(--theme-color);
-    transition: var(--transition);
-    padding-bottom: 5px;
-    border-bottom: 2px solid var(--theme-color);
-    cursor: pointer;
-
-    &:hover {
-        color: var(--title-color);
-        border-bottom: 2px solid var(--title-color);
-    }
-}
-
-.footer {
+.back-login {
     text-align: center;
-}
-
-.social-list {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 12px;
-}
-
-.link-social {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
-    border: 1px solid #ccc;
+    margin-top: 20px;
+    color: var(--body-color);
+    font-size: 1.6rem;
+    font-weight: 500;
     transition: var(--transition);
+    cursor: pointer;
 }
 
-.img-social {
-    width: 30px;
-    height: 30px;
+.back-login-link {
+    text-decoration: underline;
+    color: var(--theme-color);
 }
 
 //==============================Responsive styles==============================
