--- a/src/pages/Auth/Register/Register.module.scss
+++ b/src/pages/Auth/Register/Register.module.scss
@@ -21,6 +21,7 @@
     font-size: 2.2rem;
     font-weight: 700;
     margin: 0;
+    color: var(--body-color) !important;
 }
 
 .main-form {
@@ -93,71 +94,15 @@
     transform: translateY(-50%);
 }
 
+.icon {
+    color: var(--body-color) !important;
+}
+
 .option {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 20px 0;
-}
-
-.remember {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-
-    input[type='checkbox'] {
-        appearance: none; /* Loại bỏ kiểu mặc định */
-        width: 15px;
-        height: 15px;
-        border: 2px solid #3498db; /* Viền màu xanh */
-        border-radius: 5px; /* Bo góc tròn */
-        cursor: pointer;
-        display: inline-block;
-        position: relative;
-    }
-
-    input[type='checkbox']:checked {
-        border-radius: 5px;
-        background-color: #3498db; /* Màu nền khi được chọn */
-        border-color: #2980b9;
-    }
-
-    input[type='checkbox']::before {
-        content: '✔';
-        font-size: 14px;
-        color: white;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        display: none;
-    }
-
-    input[type='checkbox']:checked::before {
-        display: block;
-    }
-
-    .remember-pass {
-        cursor: pointer;
-    }
-}
-
-.forgot {
-    border-bottom: 2px solid var(--theme-color);
-    transition: var(--transition);
-
-    &:hover {
-        border-bottom-color: var(--title-color);
-    }
-
-    &:hover .forgot-link {
-        color: var(--title-color);
-    }
-}
-
-.forgot-link {
-    transition: var(--transition);
-    color: var(--theme-color);
 }
 
 .submit {
@@ -234,3 +179,302 @@
     width: 30px;
     height: 30px;
 }
+
+//==============================Responsive styles==============================
+// Mobile (345px trở xuống)
+@media (max-width: 344px) {
+    .wrapper {
+        width: 100%;
+        max-width: var(--main-container);
+        margin: 0 auto;
+    }
+
+    .dp-none {
+        display: none;
+    }
+
+    .container {
+        padding: 14px 12px;
+    }
+
+    .box {
+        background-color: var(--white-color);
+        border: 2px solid #dce8ff;
+        border-radius: 25px;
+        // padding: 40px 60px 40px 60px;
+        padding: 10px 20px;
+        margin-top: 20px;
+        margin: 0;
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+        animation: fadeIn 0.5s ease-in;
+    }
+
+    .remember-pass,
+    .forgot-link,
+    .required,
+    .footer p {
+        font-size: 1.4rem;
+    }
+
+    .imgContent {
+        width: 63%;
+        height: auto;
+        object-fit: cover;
+    }
+
+    .chat-bubble {
+        background-color: #007bff;
+        color: white;
+        font-size: 1.6rem;
+        padding: 10px 15px;
+        border-radius: 15px;
+        max-width: 350px;
+        word-wrap: break-word;
+        position: relative;
+        top: 15px;
+        left: 0;
+    }
+
+    .social-list {
+        padding-bottom: 12px;
+    }
+}
+
+// Mobile (480px xuống 345px)
+@media (max-width: 480px) and (min-width: 345px) {
+    .wrapper {
+        width: 100%;
+        max-width: var(--main-container);
+        margin: 0 auto;
+    }
+
+    .dp-none {
+        display: none;
+    }
+
+    .container {
+        padding: 18px 12px;
+    }
+
+    .box {
+        background-color: var(--white-color);
+        border: 2px solid #dce8ff;
+        border-radius: 25px;
+        // padding: 40px 60px 40px 60px;
+        padding: 10px 20px;
+        margin-top: 20px;
+        margin: 0;
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+        animation: fadeIn 0.5s ease-in;
+    }
+
+    .remember-pass,
+    .forgot-link,
+    .required,
+    .footer p {
+        font-size: 1.4rem;
+    }
+
+    .imgContent {
+        width: 63%;
+        height: auto;
+        object-fit: cover;
+    }
+
+    .chat-bubble {
+        background-color: #007bff;
+        color: white;
+        font-size: 1.6rem;
+        padding: 10px 15px;
+        border-radius: 15px;
+        max-width: 350px;
+        word-wrap: break-word;
+        position: relative;
+        top: 15px;
+        left: 0;
+    }
+
+    .social-list {
+        padding-bottom: 12px;
+    }
+}
+
+// Tablet nhỏ (768px xuống 481px)
+@media (max-width: 768px) and (min-width: 481px) {
+    .wrapper {
+        width: 64%;
+        max-width: var(--main-container);
+        margin: 0 auto;
+    }
+
+    .dp-none {
+        display: none;
+    }
+
+    .container {
+        padding: 18px 12px;
+    }
+
+    .box {
+        background-color: var(--white-color);
+        border: 2px solid #dce8ff;
+        border-radius: 25px;
+        // padding: 40px 60px 40px 60px;
+        padding: 20px 40px;
+        margin-top: 20px;
+        margin: 0;
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+        animation: fadeIn 0.5s ease-in;
+    }
+
+    .remember-pass,
+    .forgot-link,
+    .required,
+    .footer p {
+        font-size: 1.4rem;
+    }
+
+    .imgContent {
+        width: 63%;
+        height: auto;
+        object-fit: cover;
+    }
+
+    .chat-bubble {
+        background-color: #007bff;
+        color: white;
+        font-size: 1.6rem;
+        padding: 10px 15px;
+        border-radius: 15px;
+        max-width: 350px;
+        word-wrap: break-word;
+        position: relative;
+        top: 15px;
+        left: 0;
+    }
+
+    .social-list {
+        padding-bottom: 12px;
+    }
+}
+
+// Tablet (820px xuống 769px)
+@media (max-width: 820px) and (min-width: 769px) {
+    .wrapper {
+        width: 64%;
+        max-width: var(--main-container);
+        margin: 0 auto;
+    }
+
+    .dp-none {
+        display: none;
+    }
+
+    .container {
+        padding: 18px 12px;
+    }
+
+    .box {
+        background-color: var(--white-color);
+        border: 2px solid #dce8ff;
+        border-radius: 25px;
+        // padding: 40px 60px 40px 60px;
+        padding: 20px 40px;
+        margin-top: 20px;
+        margin: 0;
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+        animation: fadeIn 0.5s ease-in;
+    }
+
+    .remember-pass,
+    .forgot-link,
+    .required,
+    .footer p {
+        font-size: 1.4rem;
+    }
+
+    .imgContent {
+        width: 63%;
+        height: auto;
+        object-fit: cover;
+    }
+
+    .chat-bubble {
+        background-color: #007bff;
+        color: white;
+        font-size: 1.6rem;
+        padding: 10px 15px;
+        border-radius: 15px;
+        max-width: 350px;
+        word-wrap: break-word;
+        position: relative;
+        top: 15px;
+        left: 0;
+    }
+
+    .social-list {
+        padding-bottom: 12px;
+    }
+}
+
+// Laptop nhỏ (1024px xuống 821px)
+@media (max-width: 1024px) and (min-width: 821px) {
+    .custom-col {
+        width: 100% !important;
+    }
+
+    .dp-none {
+        display: none;
+    }
+
+    .container {
+        padding: 18px 40px;
+    }
+
+    .box {
+        background-color: var(--white-color);
+        border: 2px solid #dce8ff;
+        border-radius: 25px;
+        // padding: 40px 60px 40px 60px;
+        padding: 0 40px;
+        margin-top: 20px;
+        margin: 0;
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+        animation: fadeIn 0.5s ease-in;
+    }
+
+    .remember-pass,
+    .forgot-link,
+    .required,
+    .footer p {
+        font-size: 1.4rem;
+    }
+
+    .imgContent {
+        width: 63%;
+        height: auto;
+        object-fit: cover;
+    }
+
+    .chat-bubble {
+        background-color: #007bff;
+        color: white;
+        font-size: 1.6rem;
+        padding: 10px 15px;
+        border-radius: 15px;
+        max-width: 350px;
+        word-wrap: break-word;
+        position: relative;
+        top: 15px;
+        left: 0;
+    }
+
+    .social-list {
+        padding-bottom: 12px;
+    }
+}
+
+// PC & Laptop lớn (1280px xuống 1025px)
+@media (max-width: 1280px) and (min-width: 1025px) {
+}
+
